--- a/extension/views/options.html
+++ b/extension/views/options.html
@@ -1,269 +1,50 @@
-<html>
-  <head>
-    <script type="text/javascript">
-      // Your Client ID can be retrieved from your project in the Google
-      // Developer Console, https://console.developers.google.com
-      var CLIENT_ID = '899135431242-0ac4f9dv2u5l8ml34pafcl75819ib71b.apps.googleusercontent.com';
+<!doctype html>
+<html ng-app="freetime">
+<head>
+<script type="text/javascript"
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-      var SCOPES = ["https://www.googleapis.com/auth/calendar.readonly"];
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/bootstrap-theme.min.css">
+<script type="text/javascript" src="../js/angular.js"></script>
+<script type="text/javascript" src="../js/background.js"></script>
+<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 
-      /**
-       * Check if current user has authorized this application.
-       */
-      function checkAuth() {
-        gapi.auth.authorize(
-          {
-            'client_id': CLIENT_ID,
-            'scope': SCOPES,
-            'immediate': true
-          }, handleAuthResult);
-      }
+<script src="https://apis.google.com/js/client.js?onload=init"></script>
+</head>
+<body>
+	<div ng-controller="FreeTimeController as freetime">
+		<div id="authorize-div" ng-hide="freetime.authorized">
+			<h2>Please sign in and provide access to your calendar.</h2>
+			<span>Authorize access to Google Calendar API</span>
+			<button ng-click="freetime.authenticate()">Authorize</button>
+		</div>
 
-      /**
-       * Handle response from authorization server.
-       *
-       * @param {Object} authResult Authorization result.
-       */
-      function handleAuthResult(authResult) {
-        var authorizeDiv = document.getElementById('authorize-div');
-        if (authResult && !authResult.error) {
-          // Hide auth UI, then load client library.
-          authorizeDiv.style.display = 'none';
-          loadCalendarApi();
-        } else {
-          // Show auth UI, allowing the user to initiate authorization by
-          // clicking authorize button.
-          authorizeDiv.style.display = 'inline';
-        }
-      }
-
-      /**
-       * Initiate auth flow in response to user clicking authorize button.
-       *
-       * @param {Event} event Button click event.
-       */
-      function handleAuthClick(event) {
-        gapi.auth.authorize(
-          {client_id: CLIENT_ID, scope: SCOPES, immediate: false},
-          handleAuthResult);
-        return false;
-      }
-
-      /**
-       * Load Google Calendar client library. List upcoming events
-       * once client library is loaded.
-       */
-      function loadCalendarApi() {
-        gapi.client.load('calendar', 'v3', listUpcomingEvents);
-      }
-
-      /**
-       * Print the summary and start datetime/date of the next ten events in
-       * the authorized user's calendar. If no events are found an
-       * appropriate message is printed.
-       */
-      function listUpcomingEvents() {
-        var request = gapi.client.calendar.events.list({
-          'calendarId': 'primary',
-          'timeMin': (new Date()).toISOString(),
-          'showDeleted': false,
-          'singleEvents': true,
-          'maxResults': 10,
-          'orderBy': 'startTime'
-        });
-
-        request.execute(function(resp) {
-          var events = resp.items;
-          appendPre('Upcoming events:');
-
-          if (events.length > 0) {
-            for (i = 0; i < events.length; i++) {
-              var event = events[i];
-              var when = event.start.dateTime;
-              if (when) {
-	              appendPre(event.summary + ' (' + new Date(when).toLocaleString() + ')' );
-              }
-            }
-          } else {
-            appendPre('No upcoming events found.');
-          }
-
-//					appendPre("Busy time: ");
-          var blocks = listBusyBlocks(events);
-          for (i = 0; i < blocks.length ; i++ ) {
-//	          appendPre(blocks[i].start.toLocaleString() + ' to ' + blocks[i].end.toLocaleString());
-	      	}
-
-	        var dayNames = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
-
-					appendPre("Available times with at last " + Preferences.shortestTimeSlotMinutes + " minutes available");
-          var available = listAvailable(blocks,
-          									Preferences.startHour,
-          									Preferences.endHour,
-          									new Date(),
-          									Preferences.shortestTimeSlotMinutes);
-          var prevDay = "";
-          for (i = 0; i < available.length ; i++ ) {
-          	var period = available[i];
-            if (dayNames[period.start.getDay()] != prevDay) {
-            	appendHeading((prevDay = dayNames[period.start.getDay()]) + ', ' + period.start.toLocaleDateString());
-            }
-	          appendItem(period.start.toLocaleTimeString() + ' to ' + period.end.toLocaleTimeString() + ' (' + toDuration(period.start, period.end) + ')');
-	      	}
+		<div ng-show="freetime.authorized">
+			<div>
+				<button ng-click="freetime.loadEvents()">Load events</button>
+			</div>
 
 
-        });
-      }
+			<div>Preferences</div>
+			<ul>
+				<li>Shortest time slot:
+					{{freetime.preferences.shortestTimeSlotMinutes}}</li>
+				<li>Load status: {{freetime.loadStatus}}</li>
+				<li>Authenication: {{freetime.authorized}}</li>
+			</ul>
+			<br />
 
-			function toDuration(start, end) {
-				var minutes = Math.floor((end.getTime() - start.getTime()) / 1000 / 60);
-				var hours = null;
-				if (minutes >= 60) {
-					hours = Math.floor(minutes / 60);
-					minutes = minutes % 60
-				}
-				return (hours ? hours + ' hour(s) ' : '') +
-								((minutes != 0) ? minutes + ' minutes' : '').trim()
+			<div id="data">
+				<h2>Available times</h2>
+				<ol>
+					<li ng-repeat="period in freetime.availableBlocks">
+						{{period.start | date:'EEEE' }} {{period.start | date:'shortTime'
+						}} to {{period.start | date:'shortTime'}}</li>
+				</ol>
+			</div>
+		</div>
+	</div>
 
-			}
-
-			function dateMin(a, b) {
-				if (!a) {
-					return b;
-				}
-				if (a < b) {
-					return a;
-				} else {
-					return b;
-				}
-			}
-
-
-var Preferences = {
-	shortestTimeSlotMinutes: 	10,
-								startHour: 	9, // 9 am
-									endHour:  17, // 5 pm
-								 workDays: [1,2,3,4,5]
-};
-
-      function listAvailable(busyBlocks,startHour, endHour, startAfter, minWindowMinutes) {
-				var now = new Date();
-				var startWindow = new Date();
-				var endWindow = new Date();
-				endWindow.setMinutes(0);
-				endWindow.setSeconds(0);
-				endWindow.setHours(endHour);
-				startWindow.setHours(startHour);
-				startWindow.setMinutes(0);
-				startWindow.setSeconds(0);
-				if (startWindow < now) {
-					startWindow = now;
-				}
-				var availableBlock = [];
-				for(i = 0; i < busyBlocks.length; i++) {
-					var start = busyBlocks[i].start;
-					var end = busyBlocks[i].end;
-//					console.log({start: start, end:end, window: {start: startWindow,end: endWindow}});
-				  if (endWindow < startWindow) {
-				  	endWindow.setDate(endWindow.getDate()+1);
-				  	startWindow.setHours(startHour);
-				  	startWindow.setDate(endWindow.getDate());
-				  }
-				  /// FIX ME IF DAY CHANGES
-					if (startWindow < start) {
-						period = {start: new Date(startWindow), end: dateMin(endWindow, start)};
-						if (period.start.getTime() + (minWindowMinutes * 1000 * 60) < period.end) {
-							availableBlock.push(period);
-						}
-//						console.log(availableBlock);
-					}
-				  startWindow = new Date(end);
-				}
-				return availableBlock;
-      }
-
-      function listBusyBlocks(events) {
-      	var blocks = [];
-      	for(i = 0; i < events.length; i++) {
-						var event = events[i];
-            if (!event.start.dateTime || !event.end.dateTime) {
-            	continue;
-            }
-            var s = new Date(event.start.dateTime);
-            var e = new Date(event.end.dateTime);
-            var found = false;
-            for(j = 0; j < blocks.length ; j++) {
-            	if (s < blocks[j].start) {
-            		if ( e > blocks[j].end ) {
-            			blocks[j] = {start: s, end: e};
-            			found = true;
-            			break;
-            		} else if (e < blocks[j].end && e > blocks[j].start) {
-            			blocks[j] = {start: s, end: blocks[j].end};
-            			found = true;
-            			break;
-            		}
-            	} else if ( s > blocks[j].start && s < blocks[j].end && e > blocks[j].end) {
-            		blocks[j] = {start: blocks[j].start, end: e};
-            		found = true;
-            		break;
-            	}
-            }
-            if (!found) {
-            	blocks.push({start: s, end: e});
-            }
-      	}
-      	blocks.sort();
-      	return blocks;
-      }
-
-      /**
-       * Append a pre element to the body containing the given message
-       * as its text node.
-       *
-       * @param {string} message Text to be placed in pre element.
-       */
-      function appendPre(message) {
-        var pre = document.getElementById('output');
-        var textContent = document.createTextNode(message + '\n');
-        pre.appendChild(textContent);
-      }
-
-      function appendHeading(message) {
-      	var output = document.getElementById('result');
-      	var heading = document.createElement("h2");
-      	heading.appendChild(document.createTextNode(message));
-      	output.appendChild(heading);
-      }
-      function appendItem(message) {
-      	var output = document.getElementById('result');
-      	var heading = document.createElement("div");
-      	heading.appendChild(document.createTextNode(message));
-      	output.appendChild(heading);
-      }
-
-        function getTimezoneName() {
-            var timezone = jstz.determine()
-            return timezone.name();
-        }
-
-
-    </script>
-    <script src="https://apis.google.com/js/client.js?onload=checkAuth">
-    </script>
-  </head>
-  <body>
-    <div id="authorize-div" style="display: none">
-      <span>Authorize access to Google Calendar API</span>
-      <!--Button for the user to click to initiate auth sequence -->
-      <button id="authorize-button" onclick="handleAuthClick(event)">
-        Authorize
-      </button>
-    </div>
-    <pre id="output"></pre>
-
-		<h1>Schedule</h1>
-		<div id="result"/>
-
-  </body>
+</body>
 </html>
