--- a/extension/views/options.html
+++ b/extension/views/options.html
@@ -31,7 +31,7 @@
 				<li>Shortest time slot:
 					{{freetime.preferences.shortestTimeSlotMinutes}}</li>
 				<li>Load status: {{freetime.loadStatus}}</li>
-				<li>Authenication: {{freetime.authorized}}</li>
+				<li>Authentication: {{freetime.authorized}}</li>
 			</ul>
 			<br />
 
